--- a/src/main/resources/templates/admin/food/addFood.html
+++ b/src/main/resources/templates/admin/food/addFood.html
@@ -1,52 +1,58 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header">
+<head th:replace="fragments/admin/admin-header :: admin-header">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<link href="/my-custom/css/menu.css?ver=1" rel="stylesheet">
+<link href="/my-custom/css/admin/addFood.css?ver=2" rel="stylesheet">
 <body>
-<div th:replace="fragments/nav-right :: nav-right"/>
-<div th:replace="fragments/nav-top :: nav-top"/>
-<div th:replace="fragments/bodyHeader :: bodyHeader"/>
+<div th:replace="fragments/admin/admin-bodyHeader :: admin-bodyHeader"/>
 
 <!-- ======= Book A Table Section ======= -->
-<section id="book-a-table" class="book-a-table">
+<section>
     <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-            <h2>Menu</h2>
-            <p>Check Our Tasty Menu</p>
-            <div class="mt-2 selectBtn">
-                <a href="/food/foodList"><button class="btn-primary ml-2">메 뉴</button></a>
-                <a href="/admin/food/addMenu"><button class="btn-primary ml-2">멀티등록</button></a>
-                <button class="btn-primary ml-2">수 정</button>
-                <button class="btn-primary ml-2">삭 제</button>
-            </div>
-        </div>
 
         <div class="row mt-5">
             <div class="col-lg-4">
+                <div>
+                    <label>File upload</label></br>
+                </div>
+                <div>
+                    <input type="file" name="singleFile"></br>
+                </div>
                 <figure>
                     <img th:src="@{/my-custom/images/images.jpg}" id="displaySingleFile" class="mb-3"/>
                 </figure>
-                <div class="form-group mb-5">
-                    <label>File upload</label></br>
-                    <input type="file" name="singleFile"></br>
-                </div>
             </div>
             <div class="col-lg-8">
                 <form role="form" th:action th:object="${foodItemDto}"
                       method="post" enctype="multipart/form-data"
                       class="php-email-form" data-aos="fade-up" data-aos-delay="100">
-
-                    <div class="form-row text-center mb-5 border p-4">
-                        <div class="col">
-                            <label class="ml-auto col-6">
-                                분류 1
-                            </label>
+                    <div class="">
+                        <div class="col-lg-4 p-div form-group">
+                            <label>회원 ID</label>
+                            <input type="text" th:value="${userCompany.username}" readonly>
+                        </div>
+                        <div class="col-lg-4 p-div form-group">
+                            <label>회원명</label>
+                            <input type="text" th:value="${userCompany.name}" readonly>
+                        </div>
+                        <div class="col-lg-4 p-div form-group">
+                            <label>업체명 선택은 필수 입니다.</label>
+                            <select name="companyNo" id=""
+                                    class="ml-auto col-6 form-control">
+                                <option th:each="company : ${userCompany.getCompanyList()}"
+                                        th:value="${company.companyNo}"
+                                        th:text="${company.companyName}">
+                                </option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="">
+                        <div class="col-lg-6 p-div form-group">
+                            <label>분류 1</label>
                             <select th:field="${foodItemDto.foodGroups}"
-                                    class="ml-auto col-6">
+                                    class="ml-auto col-6 form-control">
                                 <option value="">==상품상세구분==</option>
                                 <option th:each="group : ${foodGroups}"
                                         th:value="${group.name()}"
@@ -54,38 +60,39 @@
                                 <!--th:text="${group.getFoodGroupsName()}">status</option>-->
                             </select>
                         </div>
-                        <div class="col">
-                            <label class="ml-auto col-6">
-                                분류 2
-                            </label>
-                            <select id="foodKindStatus" name="foodGroupsOfTitle" class="ml-auto col-6">
+                        <div class="col-lg-6 p-div form-group">
+                            <label>분류 2</label>
+                            <select id="foodKindStatus" name="foodGroupsOfTitle"
+                                    class="ml-auto col-6 form-control">
                                 <option value="">select 1 을 먼저 선택 하세요=</option>
                             </select>
                         </div>
                     </div>
 
-                    <div class="form-row">
-                        <div class="col-lg-4 col-md-6 form-group">
+                    <div class="">
+                        <div class="col-lg-4 p-div form-group">
                             <label>FoodName</label>
-                            <input type="text" th:field="${foodItemDto.itemName}" class="form-control" placeholder="foodName">
+                            <input type="text" th:field="${foodItemDto.itemName}" class="form-control" placeholder="상품이름">
                         </div>
-                        <div class="col-lg-4 col-md-6 form-group">
+                        <div class="col-lg-4 p-div form-group">
                             <label>Price</label>
-                            <input type="text" th:field="${foodItemDto.price}" class="form-control" placeholder="1,000,000">
+                            <input type="text" th:field="${foodItemDto.price}" class="form-control" placeholder="0">
                         </div>
-                        <div class="col-lg-4 col-md-6 form-group">
+                        <div class="col-lg-4 p-div form-group">
                             <label>StockQuantity</label>
-                            <input type="text" th:field="${foodItemDto.stockQuantity}" class="form-control" placeholder="10000">
+                            <input type="text" th:field="${foodItemDto.stockQuantity}" class="form-control" placeholder="0">
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label>Explains</label>
-                        <textarea class="form-control" th:field="${foodItemDto.explains}" rows="5" placeholder="Message"></textarea>
+                    <div>
+                        <div class="col-lg-12 p-div form-group">
+                            <label>Explains</label>
+                            <textarea class="form-control" th:field="${foodItemDto.explains}" rows="5" placeholder="Message"></textarea>
+                        </div>
                     </div>
 
                     <!-- ./ end check box -->
 
-                    <div class="text-center mt-5"><button type="submit">Item 등록</button></div>
+                    <div class="text-center"><button type="submit" class="addBtn btn btn-success">Item 등록</button></div>
 
                     <input type="hidden" th:field="${foodItemDto.uploadFileDto.uploadFolder}">
                     <input type="hidden" th:field="${foodItemDto.uploadFileDto.uploadPath}">
@@ -103,7 +110,7 @@
 </section><!-- End Book A Table Section -->
 
 
-<div th:replace="fragments/footer :: footer"/>
+<div th:replace="fragments/admin/admin-footer :: admin-footer"/>
 </body>
 </html>
 
