--- a/src/main/resources/templates/food/fragments/appendFormToMenu.html
+++ b/src/main/resources/templates/food/fragments/appendFormToMenu.html
@@ -35,7 +35,7 @@
                 <input class="upload-file" type="file" style="display:none;" id="file" name="singleFile"/>
             </div>
         </td>
-        <td class="align-middle"><input type="text" name="uploadFileDto.clientFileName" readonly/></td>
+        <td class="align-middle"><input class="fileUploadName" type="text" name="uploadFileDto.clientFileName" readonly/></td>
         <td class="align-middle"><input type="text" name="itemName"/></td>
         <td class="align-middle"><input type="text" name="price"/></td>
         <td class="align-middle"><input type="text" name="stockQuantity"/></td>
