--- a/src/main/resources/templates/fragments/admin/admin-header.html
+++ b/src/main/resources/templates/fragments/admin/admin-header.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:fragment="dataTable-header">
+<head th:fragment="admin-header">
 
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -22,8 +22,6 @@
   <!-- my-custom css - 테이블 적용 css -->
   <link href="/my-custom/css/table.css?ver=1" rel="stylesheet">
 
-</head>
-<body>
 
-</body>
-</html>
+</head>
+
