--- a/src/main/resources/static/my-custom/css/admin/addMenu.css
+++ b/src/main/resources/static/my-custom/css/admin/addMenu.css
@@ -1,5 +1,46 @@
 @charset "UTF-8";
 
+.firstDiv  {
+    display: flex;
+    flex-direction: inherit;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.select-label {
+    color: #f07810;
+}
+
+.subBtn {
+    margin-bottom: 20px;
+}
+
+.firstDiv > div > input:read-only {
+    margin-left: 10px;
+    background-color: #7f8fa6 !important;
+    color: black !important;
+    font-weight: bold;
+    height: 40px;
+    width: 100%;
+}
+
+.firstDiv > div > label {
+    margin-left: 13px;
+}
+
+.firstDiv > div {
+    margin-left: 20px;
+}
+
+.companySelect {
+    margin-left: 10px;
+    background-color: #204969 !important;
+    font-weight: bold;
+    height: 40px;
+    width: 100%;
+}
+
 .custom-parent-flex {
     display: flex;
 }
@@ -60,6 +101,17 @@ tr input{
     margin-top: 10px;
 }
 
+.fileUploadName {
+    width: 100%;
+    height: 35px;
+    background-color: #7f8fa6;
+    color: black;
+    border: 0;
+    font-size: 11px;
+    border: 3px solid gray;
+    margin-top: 10px;
+}
+
 .select-box {
     text-align: center;
 }
@@ -74,6 +126,7 @@ tr select {
     border: 3px solid gray;
     margin-top: 5px;
 }
+
 
 #add-rm-btn > button, span {
     width: 33%;
