--- a/src/main/resources/templates/admin/food/addMenu.html
+++ b/src/main/resources/templates/admin/food/addMenu.html
@@ -1,53 +1,83 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header">
+<head th:replace="fragments/admin/admin-header :: admin-header">
     <meta charset="UTF-8">
     <title>Title</title>
     <!-- my-custom css -->
 </head>
-<link href="/my-custom/css/addMenu.css?ver=1" rel="stylesheet">
+<link href="/my-custom/css/admin/table.css" rel="stylesheet">
+<link href="/my-custom/css/admin/addMenu.css?ver=1" rel="stylesheet">
 
 <body>
-<div th:replace="fragments/nav-right :: nav-right"/>
-<div th:replace="fragments/nav-top :: nav-top"/>
-<div th:replace="fragments/bodyHeader :: bodyHeader"/>
+<div th:replace="fragments/admin/admin-bodyHeader :: admin-bodyHeader"/>
 
-<div class="container mt-5 mb-5">
-    <form role="form" th:action th:method="post">
+<div class="container tableDiv mt-5 mb-5">
+    <!-- 본문 -->
+
+    <div class="container mt-5 mb-5">
+        <form role="form" th:action th:method="post">
+            <div class="firstDiv">
+                <button class="subBtn" type="submit">SUBMIT!!!</button>
+                <div>
+                    <label>회원아이디</label>
+                    <input type="text" th:value="${userCompany.username}" readonly>
+                </div>
+                <div>
+                    <label>ceo</label>
+                    <input type="text" th:value="${userCompany.name}" readonly>
+                </div>
+                <div>
+                    <label class="select-label" th:text="|${userCompany.name} 님의 상품을 등록할 업체중 하나를 선택 하세요|"></label>
+                    <select name="companyNo" id="" class="companySelect">
+                        <option th:each="company : ${userCompany.companyList}"
+                                th:value="${company.companyNo}"
+                                th:text="| [업체명]  :  ${company.companyName},   [사업자 번호]  :  ${company.companyNo}|">
+                        </option>
+                    </select>
+                </div>
+            </div>
+            <table class="table table-sm table-dark">
+                <thead>
+                <tr>
+                    <th class="col-lg-1">인덱스</th>
+                    <th class="col-lg-1">상품분류</th>
+                    <th class="col-lg-1">이미지</th>
+                    <th class="col-lg-1">업로드</th>
+                    <th class="col-lg-1">파일이름</th>
+                    <th class="col-lg-1">상품이름</th>
+                    <th class="col-lg-1">상품가격</th>
+                    <th class="col-lg-1">상품수량</th>
+                    <th class="col-lg-1">상품설명</th>
+                </tr>
+                </thead>
+                <tbody id="mom">
+                <div  th:replace="food/fragments/appendFormToMenu :: appendFormToMenu"/>
+                </tbody>
+            </table>
+        </form>
         <div id="head_text">
-            <h5>멀티 등록이 가능한 페이지 입니다.</h5>
+            <h3>멀티 등록이 가능한 페이지 입니다.</h3></br></br>
             <ol>
-                <li>하단의 인덱스 [ + ] 버튼을 클릭하여 새로이 등록할 아이템을 추가 하세요</li>
+                <li>상단 우측의 select box 의 업체명을 선택 하세요</li>
+                <li>인덱스 [ + ] 버튼을 클릭하여 새로이 등록할 아이템을 추가 하세요</li></br></br>
+                <li>[ UP ] 버튼을 클릭 하여 사진을 등록 하세요. </br> img 파일만 업로드 가능합니다. </br>(가능) -> JPG, JPEG, PNG, BMP, GIF, TIF, TIFF, RAW  </br>(불가) -> txt, MP4, avchd 등등</li></br></br>
                 <li>등록할 메뉴 구성이 완료 되시면 [ SUBMIT!!! ] 버튼을 눌러 주세요</li>
             </ol>
         </div>
-        <button type="submit">SUBMIT!!!</button>
-        <table class="table table-sm table-dark">
-            <thead>
-            <tr>
-                <th class="col-lg-1">인덱스</th>
-                <th class="col-lg-3">상품분류</th>
-                <th class="col-lg-1">이미지</th>
-                <th class="col-lg-1">업로드</th>
-                <th class="col-lg-1">파일이름</th>
-                <th class="col-lg-1">상품이름</th>
-                <th class="col-lg-1">상품가격</th>
-                <th class="col-lg-1">상품수량</th>
-                <th class="col-lg-1">상품설명</th>
-                <th class="col-lg-1">상품이름</th>
-            </tr>
-            </thead>
-            <tbody id="mom">
-                <div  th:replace="food/fragments/appendFormToMenu :: appendFormToMenu"/>
-            </tbody>
-        </table>
-    </form>
+    </div>
 
+
+
+
+    <!-- ... end 본문 -->
 </div>
 
-<div th:replace="fragments/footer :: footer"/>
+
+<div th:replace="fragments/admin/admin-footer :: admin-footer"/>
+<!--<div th:replace="fragments/footer :: footer"/>-->
 </body>
 </html>
+
 
 <script type="application/javascript">
 
@@ -167,7 +197,7 @@
             } //end if
         });
 
-<!-- ================================ [ function field ]======================================= -->
+        <!-- ================================ [ function field ]======================================= -->
 
         function addHtml(clone, currentNo){
             const cloneId = clone;
