--- a/src/main/resources/templates/admin/user/users.html
+++ b/src/main/resources/templates/admin/user/users.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/admin-header :: dataTable-header">
+<head th:replace="fragments/admin/admin-header :: admin-header">
   <meta charset="UTF-8">
   <title>Title</title>
   <!-- my-custom css -->
 </head>
-<link href="/my-custom/css/table.css" rel="stylesheet">
+<link href="/my-custom/css/admin/table.css" rel="stylesheet">
 
 <!-- 현재 페이지에도 input , select css 적용 -> 삭제 하지 말것 -->
-<link href="/my-custom/css/input_select.css?ver=1" rel="stylesheet">
-<link href="/my-custom/css/paging.css" rel="stylesheet">
+<link href="/my-custom/css/admin/search.css?ver=1" rel="stylesheet">
+<link href="/my-custom/css/admin/paging.css" rel="stylesheet">
 
 <body>
-<div th:replace="fragments/admin-nav-top :: nav-top"/>
-<div th:replace="fragments/nav-right :: nav-right"/>
-<div th:replace="fragments/bodyHeader :: bodyHeader"/>
+<div th:replace="fragments/admin/admin-bodyHeader :: admin-bodyHeader"/>
 
 <div class="container tableDiv mt-5 mb-5">
   <div class="p-flex">
@@ -56,10 +54,17 @@
         <input type="search" class="SphoneNumber" placeholder="폰번호"th:value="${userSearch.phoneNumber}"/>
       </div>
       <div>
+<!--        <select name="" id="selectRole">-->
+<!--          <div th:if="${userSearch.userRole} != null">-->
+<!--            <option value="">권한</option>-->
+<!--          </div>-->
+<!--          <option th:each="role : ${userRole}"-->
+<!--                  th:value="${role.name()}"-->
+<!--                  th:selected="${role.name() eq param?.userRole?.toString()}"-->
+<!--                  th:text="${role.name()}">status</option>-->
+<!--        </select>-->
         <select name="" id="selectRole">
-          <div th:if="${userSearch.userRole} == null">
-            <option value="">권한</option>
-          </div>
+          <option value="">권한</option>
           <option th:each="role : ${userRole}"
                   th:value="${role.name()}"
                   th:selected="${role.name() eq param?.userRole?.toString()}"
@@ -67,7 +72,7 @@
         </select>
       </div>
       <div>
-        <button type="button" class="btn btn-success searchBtn">search</button>
+        <button type="button" class="btn btn-success searchBtn">SEARCH</button>
       </div>
     </div>
   </div>
@@ -105,14 +110,14 @@
 </div>
 
 <form class="userSearchForm" th:action="@{/admin/user/users}" th:method="get">
-  <input type="hidden" th:name="pageNum" value="">
-  <input type="hidden" th:name="username" value="">
-  <input type="hidden" th:name="name" value="">
-  <input type="hidden" th:name="phoneNumber" value="">
-  <input type="hidden" th:name="userRole" value="">
+  <input type="hidden" th:name="pageNum" th:value="${param.pageNum}">
+  <input type="hidden" th:name="username" th:value="${param.username}">
+  <input type="hidden" th:name="name" th:value="${param.name}">
+  <input type="hidden" th:name="phoneNumber" th:value="${param.phoneNumber}">
+  <input type="hidden" th:name="userRole" th:value="${param.userRole}">
 </form>
 
-<div th:replace="fragments/admin-footer :: dataTable-footer"/>
+<div th:replace="fragments/admin/admin-footer :: admin-footer"/>
 <!--<div th:replace="fragments/footer :: footer"/>-->
 </body>
 </html>
@@ -146,11 +151,6 @@ $(document).ready(function (){
     $username.val(Susername);
     $name.val(Sname);
     $phoneNumber.val(SphoneNumber);
-
-    $form.submit();
-  });
-
-  $(".page-link").on("click", function(e){
 
     $form.submit();
   });
