--- a/src/main/resources/templates/fragments/admin/admin-footer.html
+++ b/src/main/resources/templates/fragments/admin/admin-footer.html
@@ -1,27 +1,10 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<div class="header mt-5" th:fragment="dataTable-footer">
-    <!-- dataTable -->
-    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap.min.css">
-
-
-
-
+<html lang="en">
+<!-- Footer-->
+<div th:fragment="admin-footer">
 
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-
-    <link href="/rest/assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-    <link href="/rest/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="/rest/assets/vendor/animate.css/animate.min.css" rel="stylesheet">
-    <link href="/rest/assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="/rest/assets/vendor/venobox/venobox.css" rel="stylesheet">
-    <link href="/rest/assets/vendor/aos/aos.css" rel="stylesheet">
-
-    <!-- Template Main CSS File -->
-    <link href="/rest/assets/css/style.css" rel="stylesheet">
     <!-- Core theme JS-->
     <script src="/demo/js/scripts.js"></script>
 
@@ -103,6 +86,16 @@
     <div id="preloader"></div>
     <a href="#" class="back-to-top"><i class="bx bx-up-arrow-alt"></i></a>
 
+    <!-- Vendor JS Files -->
+    <script src="/rest/assets/vendor/jquery/jquery.min.js"></script>
+    <script src="/rest/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/rest/assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+    <!--    <script src="/rest/assets/vendor/php-email-form/validate.js"></script>-->
+    <script src="/rest/assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+    <script src="/rest/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="/rest/assets/vendor/venobox/venobox.min.js"></script>
+    <script src="/rest/assets/vendor/aos/aos.js"></script>
+
     <!-- Template Main JS File -->
     <script src="/rest/assets/js/main.js"></script>
 
@@ -111,4 +104,3 @@
     <script src="/my-custom/js/uploadFile.js"></script>
 
 </div>
-
