--- a/src/main/resources/templates/fragments/nav-top.html
+++ b/src/main/resources/templates/fragments/nav-top.html
@@ -45,6 +45,7 @@
 
         <nav class="nav-menu d-none d-lg-block">
             <ul>
+                <li class="book-a-table text-center"><a href="/manager/managerHome">MANAGER</a></li>
                 <li class="book-a-table text-center"><a href="/admin/adminHome">ADMIN</a></li>
                 <li><a href="#about">회원가입</a></li>
                 <li><a href="/food/menu">Menu</a></li>
