--- a/src/main/resources/templates/fragments/admin/admin-nav-top.html
+++ b/src/main/resources/templates/fragments/admin/admin-nav-top.html
@@ -17,8 +17,8 @@
                     <li><a href="/admin/food/foodList">푸드리스트</a></li>
                     <li><a href="/admin/food/addFood">푸드단일등록</a></li>
                     <li><a href="/admin/food/addMenu">푸드멀티등록</a></li>
-                    <li><a href="/admin/manager/managerEdit">매니저-edit</a></li>
-                    <li><a href="#chefs">Chefs</a></li>
+                    <li><a href="/admin/manager/addCompany">업체등록</a></li>
+                    <li><a href="/admin/manager/managerEdit">매니저(업체)-edit</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav><!-- .nav-menu -->
