--- a/src/main/resources/templates/admin/company/managerEdit.html
+++ b/src/main/resources/templates/admin/company/managerEdit.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/manager/manager-header :: manager-header">
+<head th:replace="fragments/header :: header">
     <meta charset="UTF-8">
     <title>Title</title>
     <!-- my-custom css -->
@@ -8,27 +8,14 @@
 <link href="/my-custom/css/admin/managerEdit.css" rel="stylesheet">
 
 <body>
-<div th:replace="fragments/admin/admin-bodyHeader :: admin-bodyHeader"/>
+<div th:replace="fragments/nav-top :: nav-top"/>
+<div th:replace="fragments/adminFrag/admin-bodyHeader :: admin-bodyHeader"/>
 <style>
     #home {
         margin-top: 30px;
     }
 </style>
 <main id="main">
-    <section class="breadcrumbs">
-        <div class="container">
-
-            <div id="home" class="d-flex justify-content-between align-items-center">
-                <h2>Inner Page</h2>
-                <ol>
-                    <li><a href="index.html">Home</a></li>
-                    <li>Inner Page</li>
-                </ol>
-            </div>
-
-        </div>
-    </section>
-
     <section class="inner-page">
         <div class="container">
             <div class="row">
