--- a/src/main/resources/templates/admin/food/addFood.html
+++ b/src/main/resources/templates/admin/food/addFood.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/admin/admin-header :: admin-header">
+<head th:replace="fragments/header :: header">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <link href="/my-custom/css/admin/addFood.css?ver=2" rel="stylesheet">
+<link href="/my-custom/css/admin/editFood.css?ver=2" rel="stylesheet">
 <body>
-<div th:replace="fragments/admin/admin-bodyHeader :: admin-bodyHeader"/>
+<div th:replace="fragments/nav-top :: nav-top"/>
+<div th:replace="fragments/adminFrag/admin-bodyHeader :: admin-bodyHeader"/>
 
 <!-- ======= Book A Table Section ======= -->
 <section>
     <div class="container" data-aos="fade-up">
-
         <div class="row mt-5">
             <div class="col-lg-4">
                 <div>
@@ -28,7 +29,7 @@
                 <form role="form" th:action th:object="${foodItemDto}"
                       method="post" enctype="multipart/form-data"
                       class="php-email-form" data-aos="fade-up" data-aos-delay="100">
-                    <div class="">
+                    <div class="row">
                         <div class="col-lg-4 p-div form-group">
                             <label>회원 ID</label>
                             <input type="text" th:value="${userCompany.username}" readonly>
@@ -39,20 +40,22 @@
                         </div>
                         <div class="col-lg-4 p-div form-group">
                             <label>업체명 선택은 필수 입니다.</label>
-                            <select name="companyNo" id=""
-                                    class="ml-auto col-6 form-control">
+                            <select th:disabled="${not #strings.isEmpty(param.companyNo)}"
+                                    name="companyNo" id=""
+                                    class="form-control">
                                 <option th:each="company : ${userCompany.getCompanyList()}"
+                                        th:selected="${company.companyNo} == ${param.companyNo != null ? param.companyNo.toString() : ''}"
                                         th:value="${company.companyNo}"
-                                        th:text="${company.companyName}">
+                                        th:text="${company.companyNo}">
                                 </option>
                             </select>
                         </div>
                     </div>
-                    <div class="">
+                    <div class="row">
                         <div class="col-lg-6 p-div form-group">
                             <label>분류 1</label>
                             <select th:field="${foodItemDto.foodGroups}"
-                                    class="ml-auto col-6 form-control">
+                                    class="form-control">
                                 <option value="">==상품상세구분==</option>
                                 <option th:each="group : ${foodGroups}"
                                         th:value="${group.name()}"
@@ -63,13 +66,13 @@
                         <div class="col-lg-6 p-div form-group">
                             <label>분류 2</label>
                             <select id="foodKindStatus" name="foodGroupsOfTitle"
-                                    class="ml-auto col-6 form-control">
+                                    class="form-control">
                                 <option value="">select 1 을 먼저 선택 하세요=</option>
                             </select>
                         </div>
                     </div>
 
-                    <div class="">
+                    <div class="row">
                         <div class="col-lg-4 p-div form-group">
                             <label>FoodName</label>
                             <input type="text" th:field="${foodItemDto.itemName}" class="form-control" placeholder="상품이름">
@@ -83,7 +86,7 @@
                             <input type="text" th:field="${foodItemDto.stockQuantity}" class="form-control" placeholder="0">
                         </div>
                     </div>
-                    <div>
+                    <div class="row">
                         <div class="col-lg-12 p-div form-group">
                             <label>Explains</label>
                             <textarea class="form-control" th:field="${foodItemDto.explains}" rows="5" placeholder="Message"></textarea>
@@ -110,7 +113,7 @@
 </section><!-- End Book A Table Section -->
 
 
-<div th:replace="fragments/admin/admin-footer :: admin-footer"/>
+<div th:replace="fragments/footer :: footer"/>
 </body>
 </html>
 
